<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>icm20948_imu_node</name>
  <version>0.0.9</version>
  <description>ICM20948 IMU ROS2 node.</description>
  <maintainer email="valentin.yuryev@epfl.ch">Valentin Yuryev</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>